--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-appwrite": "^0.2.2",
+    "react-native": "^0.73.6",
+    "react-native-appwrite": "^0.3.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0"
